plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in [iosX64, sharedLinux] modules'; targets=[(text=iosX64; icon=nodes/Module.svg); (text=sharedLinux; icon=nodes/Module.svg)]")!>ActualizedInSharedAndLeaf<!>

expect class <!LINE_MARKER("descr='Has actuals in [linuxArm64, iosX64, linuxX64] modules'; targets=[(text=linuxArm64; icon=nodes/Module.svg); (text=iosX64; icon=nodes/Module.svg); (text=linuxX64; icon=nodes/Module.svg)]")!>ActualizedInLeaves<!>
